0.12.100
	+ New release
	+ Added filter profiles
	+ Added group polices
	+ Added time period option to policies
	+ Added per-object group policies
	+ Added antivirus support
0.12.99
	+ Add support for reporting
	+ User support
	+ Exemption for cache option added
	+ Adapted to objects with overlapping addresses
0.12
	+ Use the new EBox::Model::Row api
	+ Add field help to models
	+ Fix titles within tabs
	+ Set deny as default policy
0.11.101
	+ New release
0.11.100
	+ Use the new syntax to enable transparent proxy
	+ Do not launch dansguardian with setsid. It was necessary with runit,
	  but not with upstart any more.
	+ do not remove rc scripts, stop on pre-start
0.11.99
	+ Set proper language to show denied access page by dansguardian
	using eBox locale (Currently manually maintained)
0.11.1
	+ Bugfix. MIME and extension filter allow attribute is NOT
	optional but they have a default value
O.11
	+ New release
0.10.99
	+ Use new model/view framework. UI uses Ajax
	+ Attempt to simplify content filter interface
0.10
	+ New release
0.9.100
	+ New release
0.9.99
	+ New release
0.9.3
	+ New release
0.9.2
	+ Add nasty workaround to try to stop and create swap directories for
	  squid
O.9.1
	+ New release
0.9
	+ Added Polish translation.00
	+ Added German Translation	

0.8.99
	+ New release
0.8.1
	+ force creation of swap directories in postinst
0.8
	+ New release
0.7.99
	+ Add Mime Type Filter Support
	+ Add custom filter support for file extensions and Mime Type
	+ Merge portuguese translation thanks to JC Junior
	+ Add some explanatory notes
	+ Fix some small bugs
	+ Fix a bug which made dansguardian crash at start
	+ Dansguardian does not start when it shouldn't

0.7.1
	+ Add support to configure banned extension list in dansguardian
	+ GUI consitency
	+ Use of ebox-sudoers-friendly
	
0.7
	+ First public release
0.6
	+ move to client
	+ API documented using naturaldocs
	+ Update install
	+ Update debian scripts

0.5.2
	+ Fix some packaging issues

0.5.1