@@ -5,6 +5,7 @@
 	+ Added time period option to policies
 	+ Added per-object group policies
 	+ Added antivirus support
+	+ Added dansguardian's custom logrotate file
 0.12.99
 	+ Add support for reporting
 	+ User support
